modified PLOS citation

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@ scales. I try to understand the causes for today's global deep overturning circu
 changed in the past, how it may change in the future due to natural or human influences, how it impacts climate, 
 ecosystems and biogeochemical cycles including isotopes. Click on the PROJECTS link above to find out more about 
 current projects. I develop, improve, analyze, and use numerical (computer) models. The code I develop is 
-available and free for everybody do download and use. Click on the MODELS link above or contact me if you're 
+available and free for everybody to download and use. Click on the MODELS link above or contact me if you're 
 interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/climatevoices/schmittner/"> Here </a> is an interview about my life and career as part of OSU's Voices of a Warming Planet project.</p>
 
 <h2>Just Published</h2>
 
 <li>Schmittner, A., and N. J. Fillman<br>
 	<b>Carbon and Carbon-13 in the Preindustrial and Glacial Ocean</b>
-	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
+	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434,<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
 	<div class="publinks">
 		<a class="publinks" href="https://zenodo.org/records/11224826">data</a>
 		<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434">html</a>
