--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
 <a id="2024"><h4>2024</h4></a>
 <li>Schmittner, A., and N. J. Fillman<br>
 	<b>Carbon and Carbon-13 in the Preindustrial and Glacial Ocean</b>
-	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
+	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434,<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
 	<div class="publinks">
 		<a class="publinks" href="https://zenodo.org/records/11224826">data</a>
 		<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434">html</a>
