Nate's thesis added

--- a/group.html
+++ b/group.html
@@ -25,7 +25,6 @@
 
 <div id="container" style="width:1100px">
 
-
 <div><h2>Current Group Members</h2>
 
 <ul>
@@ -44,15 +43,16 @@ Graduate Student (PhD)
 Project: <a href="Projects/Nd">Modeling the Ocean Distribution of Neodymium Isotopes: Testing the Bottom-Up Hypothesis</a><br>
 Start: Winter 2022 - current<br>
 
-<li><h3>Nathaniel Fillman</h3>
-Graduate Student (MS)
-Project: <a href="Projects/OceanCarbon">NSFGEO-NERC: Quantifying the Modern and Glacial Ocean’s Carbon Cycle Including Isotopes</a><br>
-Start: Summer 2020 - current<br>
-
 </ul>
 
 <div><h2>Previous Group Members</h2>
 <ul>
+<li><h3>Nathaniel Fillman</h3>
+Graduate Student (MS)
+Project: <a href="Projects/OceanCarbon">NSFGEO-NERC: Quantifying the Modern and Glacial Ocean’s Carbon Cycle Including Isotopes</a><br>
+Start: Summer 2020 - Summer 2023
+MS: 2023-06-28 <a href="https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/7d279241f?locale=en"> Variable Stoichiometry Effects on Glacial/Interglacial Ocean Model Biogeochemical Cycles and Carbon Storage</a><br>:
+
 <li><h3><a href="https://sites.google.com/view/jithinabrahamk">Jithin Abraham K</a></h3>
 Postdoc
 Project: <a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning Circulation in the Modern and Glacial Ocean</a><br>
