--- a/group.html
+++ b/group.html
@@ -51,7 +51,7 @@ Start: Winter 2022 - current<br>
 Graduate Student (MS)
 Project: <a href="Projects/OceanCarbon">NSFGEO-NERC: Quantifying the Modern and Glacial Ocean’s Carbon Cycle Including Isotopes</a><br>
 Start: Summer 2020 - Summer 2023
-MS: 2023-06-28 <a href="https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/7d279241f?locale=en"> Variable Stoichiometry Effects on Glacial/Interglacial Ocean Model Biogeochemical Cycles and Carbon Storage</a><br>:
+MS: 2023-06-28 <a href="https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/7d279241f?locale=en"> Variable Stoichiometry Effects on Glacial/Interglacial Ocean Model Biogeochemical Cycles and Carbon Storage</a><br>
 
 <li><h3><a href="https://sites.google.com/view/jithinabrahamk">Jithin Abraham K</a></h3>
 Postdoc
