Newport Aug16 2024 outreach event added:

--- a/Projects/Completed/OC3/index.html
+++ b/Projects/Completed/OC3/index.html
@@ -95,7 +95,7 @@ Specific science questions addressed are:
 <li>
  <a class="publinks" href="http://www.biogeosciences.net/10/5793/2013/bg-10-5793-2013-supplement.zip">  &#948<sup>13</sup>C model code </a> (works with UVic model version 2.8)
 <li> <a class="publinks" href="https://www.ncdc.noaa.gov/paleo-search/study/22110"> The core-top database (Fig. 2).</a>
-<li> The down-core database is also work-in-progress. Currently it includes more than 400 cores (Fig. 3).
+<li> The down-core database is available <a class="publinks" href="https://zenodo.org/records/11187264"> here</a>.
 </p></div><!--Data-->
 
 <div id="figurebox" style="float:right;width:600px;border:1px solid #ccc;margin:10px 10px 10px 10px">
@@ -201,6 +201,9 @@ Specific science questions addressed are:
 
 <div id="presentations" style="width:1100px;float:left">
 <a id="presentations"><h2>Presentations</h2></a>
+
+<li><a class="publinks" href="https://drive.google.com/file/d/1uUsvWs_j4q44kVnxK-Z5yk3GDRtgXAf9/view?usp=sharing">
+Variability of Ocean δ<sup>13</sup>C From the Last Glacial Maximum to the Holocene</a> Ocean Sciences Meeting, 2024, New Orleans. 
 
 <li><a class="publinks" href="poster_OC3.pdf"> Global Calibration of Benthic Foranimiferal Carbon Isotope Ratios, </a>Poster at AGU Fall Meeting 2015.
 
