--- a/outreach.html
+++ b/outreach.html
@@ -29,6 +29,8 @@
 
 <ul>
 
+<li>08-16-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Aug16_2024/index.html">Climate Science at Arcoiris</a></li>
+
 <li>October 2023 Terra X Podcast ZDF (in German) <a href="https://www.zdf.de/dokumentation/terra-x/podcast-und-kolumne-100.html">Droht eine neue Eiszeit? Der Golfstrom ist in Gefahr. Die Wissenschaft schlägt Alarm.</a></li>
 
 <li>08-05-2021 Interview with Chris D'Angelo from the Huffington Post <a href="https://www.huffpost.com/entry/atlantic-ocean-current-collapse-study-climate_n_610c20f0e4b06253fa4c3d93">Climate Change Could Shut Down A Vital Ocean Current, Study Finds</a></li>
