fixed style file links

--- a/Outreach/Newport_Aug16_2024/index.html
+++ b/Outreach/Newport_Aug16_2024/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>Climate Science at Arcoiris Cultural Center</title>
-<link rel="stylesheet" type="text/css" href="http://people.oregonstate.edu/~schmita2/test2.css">
+<link rel="stylesheet" type="text/css" href="https://andreasschmittner.github.io/test2.css">
 </head>
 <body>
 <h1>Climate Science at Arcoiris Cultural Center</h1>
