--- a/Outreach/TeacherWS_2014/index.html
+++ b/Outreach/TeacherWS_2014/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>Climate Change and Ocean Acidification: A Workshop for Oregon Educators</title>
-<link rel="stylesheet" type="text/css" href="http://people.oregonstate.edu/~schmita2/test2.css">
+<link rel="stylesheet" type="text/css" href="https://andreasschmittner.github.io/test2.css">
 </head>
 <body>
 <h1>Climate Change and Ocean Acidification: A Workshop for Oregon Educators</h1>
@@ -12,8 +12,8 @@
 
 <div style="width:1200px;float:left;margin-bottom:25px;">
 <ul class="menue">
-<li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2/index.html">Andreas' Home</a></li>
-<li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2/climate_change.html">Climate Change Links</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io/index.html">Andreas' Home</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io/climate_change.html">Climate Change Links</a></li>
 </ul>
 </div>
 
@@ -72,7 +72,7 @@ George Waldbusser (half visible on left margin).</p></div>
 <p><a href="http://public.health.oregon.gov/HealthyEnvironments/climatechange/Pages/Publications-Training.aspx">Oregon Health Authority-Climate Change</a></p>
 <p><a href="http://www.co.benton.or.us/health/environmental_health/climate_change.php ">Benton County Environmental Health-Climate Change</a></p>
 
-<p>Funded by the National Science Foundation's Marine Geology and Geophysics program, <a href="http://people.oregonstate.edu/~schmita2/Projects/LGM/">grant OCE-1131834</a>.</p>
+<p>Funded by the National Science Foundation's Marine Geology and Geophysics program, <a href="https://andreasschmittner.github.io/Projects/LGM/">grant OCE-1131834</a>.</p>
 
 <p>Last updated Aug. 20, 2014</p>
 
