--- a/outreach.html
+++ b/outreach.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Outreach Andreas Schmittner</title>
-<link rel="stylesheet" type="text/css" href="test2.css">
+<link rel="stylesheet" type="text/css" href="https://andreasschmittner.github.io/test2.css">
 </head>
 <body>
 <h1> Andreas Schmittner's Outreach Activities</h1>
