--- a/Outreach/Newport_Aug16_2024/index.html
+++ b/Outreach/Newport_Aug16_2024/index.html
@@ -12,8 +12,8 @@
 
 <div style="width:1200px;float:left;margin-bottom:25px;">
 <ul class="menue">
-<li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2/index.html">Andreas' Home</a></li>
-<li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2/climate_change.html">Climate Change Links</a></li>
+<li class="menue"><a class="menue" href="hhttps://andreasschmittner.github.io/index.html">Andreas' Home</a></li>
+<li class="menue"><a class="menue" href="hhttps://andreasschmittner.github.io/climate_change.html">Climate Change Links</a></li>
 </ul>
 </div>
 
