--- a/Outreach/Newport_Aug16_2024/index.html
+++ b/Outreach/Newport_Aug16_2024/index.html
@@ -31,7 +31,7 @@
 <p>Partnering with the Oregon Museum of Science and Industry (<a href="https://omsi.edu/">OMSI</a>) and the <a href="https://www.olallacenter.org/arcoiris-cultural">Arcoiris Cultural Center</a> a climate science outreach event was conducted at the Arcoiris Cultural Center in Newport, Oregon. Nine families of the Latinx, Guatemalan and Indigenous Mesoamerican community participated. After lunch, participants (mostly the kids) conducted experiments such as the cloud-in-a-bottle and a sea water density experiment with colored water in a tank (see Pictures). Then we went on the "climate walk", a guided tour of nearby places such as the beach, a park and the library, where participants explored possible impacts of climate change on the local environment.
 </p>
 
-div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
+<div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
 <img src="kitesjpg" style="margin:0px 0px 0px 0px;width:500px">
 <img src="found_it.jpg" style="margin:0px 0px 0px 0px;width:500px">
