--- a/Outreach/Newport_Aug16_2024/index.html
+++ b/Outreach/Newport_Aug16_2024/index.html
@@ -33,7 +33,7 @@
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
-<img src="kitesjpg" style="margin:0px 0px 0px 0px;width:500px">
+<img src="kites.jpg" style="margin:0px 0px 0px 0px;width:500px">
 <img src="found_it.jpg" style="margin:0px 0px 0px 0px;width:500px">
 <img src="group_photo.jpeg" style="margin:0px 0px 0px 0px;width:500px">
 </div><!--figure-->
