add Matthew's report

--- a/Models/MOBI/index.html
+++ b/Models/MOBI/index.html
@@ -29,8 +29,8 @@
 <img src="MOBI2.0.png" style="width:900px;margin:0px 0px 0px 0px">
 </div><!--figure-->
 <div style="width:880px;margin:10px 10px 10px 10px"> 
-<p>MOBI includes three phytoplankton classes (nitrogen fixers a.k.a. diazotrophs, calcifiers a.k.a. coccolithophores and other phytoplankton),
-nitrate (NO<sub>3</sub>), phosphate (PO<sub>4</sub>) and dissolved iron (DFe) as interactive nutrients, zooplankton, 
+<p>MOBI includes three phytoplankton classes (nitrogen fixers a.k.a. diazotrophs, diatoms and other phytoplankton),
+nitrate (NO<sub>3</sub>), phosphate (PO<sub>4</sub>), silicate and dissolved iron (DFe) as interactive nutrients, zooplankton, 
 and detritus (dead particulate organic matter). Calcium carbonate (CaCO<sub>3</sub>) is a prognostic
 variable. Its production is calculated as a fraction of the detritus produced by coccolithophores and zooplankton and it is sinking into the deep ocean
 where it dissolves. Nitrogen (<sup>15</sup>N) and carbon (<sup>13</sup>C) 
