--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -151,6 +151,12 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 
 <div id="reports" style="width:1100px;float:left">
 <a id="reports"><h2>Reports</h2></a>
+<li>Boling, M., and A. Schmittner<br>
+<b>Modeling Effects of AMOC Variations on Carbon Components</b>
+<div class="journal"><i>Research Experiences for Undergraduates</i>, Sep, 2024</div>
+<div class="publinks">
+<a class="publinks" href="ResearchReport_MatthewBoling.pdf">pdf</a>
+</div></li>
 <li>Stahr, E., and A. Schmittner<br>
 <b>Reconstructing Atlantic Meridional Overturning Circulation during Heinrich Stadial 1 using carbon isotopes</b>
 <div class="journal"><i>Research Experiences for Undergraduates</i>, Aug, 2022</div>
