--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -185,6 +185,8 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 <li><a href="https://smile.oregonstate.edu/smile-staff">Jay Well</a>, SMILE<br>
 <li><a href="https://www.earth.ox.ac.uk/people/ellen-cliff/">Ellen Cliff</a>, Graduate Student<br>
 <li>Nathaniel Fillman, Graduate Student<br>
+<li>Matthew Bolin, Undergraduate Student<br>
+<li>Elijah Stahr, Undergraduate Student<br>
 </ul>
 </div><!--People-->
 last changed Sep 11, 2024
