added Newport events

--- a/outreach.html
+++ b/outreach.html
@@ -29,7 +29,11 @@
 
 <ul>
 
+<li>09-08-2024 Climate Science at Arcoiris. A discussion and climate walk with Latinix, Guatemalan, and Indigenous Mesoamerican families.</li>
+
 <li>08-16-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Aug16_2024/index.html">Climate Science at Arcoiris</a></li>
+
+<li>03-19-2024 Climate Science Outreach Event at Newport Public Library. Our team, including OMSI, met with Newport community leaders to learn what topics they want climate outreach events for and for which audiences.</li>
 
 <li>October 2023 Terra X Podcast ZDF (in German) <a href="https://www.zdf.de/dokumentation/terra-x/podcast-und-kolumne-100.html">Droht eine neue Eiszeit? Der Golfstrom ist in Gefahr. Die Wissenschaft schlägt Alarm.</a></li>
 
