add 2nd event to outreach

--- a/outreach.html
+++ b/outreach.html
@@ -29,9 +29,9 @@
 
 <ul>
 
-<li>09-08-2024 Climate Science at Arcoiris. A discussion and climate walk with Latinix, Guatemalan, and Indigenous Mesoamerican families.</li>
+<li>09-08-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Sep8_2024/index.html">Climate Science at Arcoiris. </a></li>
 
-<li>08-16-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Aug16_2024/index.html">Climate Science at Arcoiris</a></li>
+<li>08-16-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Aug16_2024/index.html">Climate Science at Arcoiris.</a></li>
 
 <li>03-19-2024 Climate Science Outreach Event at Newport Public Library. Our team, including OMSI, met with Newport community leaders to learn what topics they want climate outreach events for and for which audiences.</li>
 
