--- a/Outreach/Newport_Sep8_2024/index.html
+++ b/Outreach/Newport_Sep8_2024/index.html
@@ -12,10 +12,17 @@
 
 <div style="width:1200px;float:left;margin-bottom:25px;">
 <ul class="menue">
-<li class="menue"><a class="menue" href="hhttps://andreasschmittner.github.io/index.html">Andreas' Home</a></li>
-<li class="menue"><a class="menue" href="hhttps://andreasschmittner.github.io/climate_change.html">Climate Change Links</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io/index.html">Andreas' Home</a></li>
+<li class="menue"><a class="menue" href="https://andreasschmittner.github.io/climate_change.html">Climate Change Links</a></li>
 </ul>
 </div>
+
+<div id="links" style="float:right;width:300px;margin:-20px 0px 0px 15px">
+<p style="text-align:right"><b>Downloads</b></p>
+<ul class="menueright">
+<li><a class="menueright" href="http://open.oregonstate.education/climatechange">Climate Walk</a></li>
+</ul>
+</div><!--links-->
 
 <div id="container" style="width:1100px">
 
