--- a/Outreach/Newport_Sep8_2024/index.html
+++ b/Outreach/Newport_Sep8_2024/index.html
@@ -17,6 +17,9 @@
 </ul>
 </div>
 
+
+<div id="container" style="width:1100px">
+
 <div id="links" style="float:right;width:300px;margin:-20px 0px 0px 15px">
 <p style="text-align:right"><b>Downloads</b></p>
 <ul class="menueright">
@@ -24,8 +27,8 @@
 </ul>
 </div><!--links-->
 
-<div id="container" style="width:1100px">
-
+<p>Partnering with the Oregon Museum of Science and Industry (<a href="https://omsi.edu/">OMSI</a>) and the <a href="https://www.olallacenter.org/arcoiris-cultural">Arcoiris Cultural Center</a> a climate science outreach event was conducted at the Arcoiris Cultural Center in Newport, Oregon. Families of the Latinx, Guatemalan and Indigenous Mesoamerican community participated in a discussion, scientific demonstrations, and a "climate walk", a guided tour of nearby places such as the beach, a park and the library, where participants explored possible impacts of climate change on the local environment.
+</p>
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
 <img src="event2demo.jpg" style="margin:0px 0px 0px 0px;width:500px">
@@ -35,8 +38,9 @@
 <p>Top: Early-career scientist Schmitty Thompson demonstrates an activity related to sea level rise to kids. Bottom: Scientist Andreas Schmittner discusses climate change with participants.</p></div>
 </div><!--figurebox-->
 
-<p>Partnering with the Oregon Museum of Science and Industry (<a href="https://omsi.edu/">OMSI</a>) and the <a href="https://www.olallacenter.org/arcoiris-cultural">Arcoiris Cultural Center</a> a climate science outreach event was conducted at the Arcoiris Cultural Center in Newport, Oregon. Families of the Latinx, Guatemalan and Indigenous Mesoamerican community participated in a discussion, scientific demonstrations, and a "climate walk", a guided tour of nearby places such as the beach, a park and the library, where participants explored possible impacts of climate change on the local environment.
+<p>Maps used for the climate walk are available <a href="Climate_walk.pdf">here</a>.
 </p>
+
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
