--- a/Outreach/Newport_Sep8_2024/index.html
+++ b/Outreach/Newport_Sep8_2024/index.html
@@ -21,9 +21,10 @@
 <div id="container" style="width:1100px">
 
 <div id="links" style="float:right;width:300px;margin:-20px 0px 0px 15px">
-<p style="text-align:right"><b>Downloads</b></p>
+<p style="text-align:right"><b>Downloads and Links</b></p>
 <ul class="menueright">
-<li><a class="menueright" href="http://open.oregonstate.education/climatechange">Climate Walk</a></li>
+<li><a class="menueright" href="limate_walk.pdf">Climate Walk</a></li>
+<li><a class="menueright" href="http://open.oregonstate.education/climatechange">Climate Textbook</a></li>
 </ul>
 </div><!--links-->
 
