--- a/Outreach/Newport_Sep8_2024/index.html
+++ b/Outreach/Newport_Sep8_2024/index.html
@@ -23,13 +23,17 @@
 <div id="links" style="float:right;width:300px;margin:-20px 0px 0px 15px">
 <p style="text-align:right"><b>Downloads and Links</b></p>
 <ul class="menueright">
-<li><a class="menueright" href="limate_walk.pdf">Climate Walk</a></li>
+<li><a class="menueright" href="Climate_walk.pdf">Climate Walk Maps</a></li>
+<li><a class="menueright" href="Community_Climate_Events_evaluation_report.pdf">Evaluation Report</a></li>
 <li><a class="menueright" href="http://open.oregonstate.education/climatechange">Climate Textbook</a></li>
 </ul>
 </div><!--links-->
 
 <p>Partnering with the Oregon Museum of Science and Industry (<a href="https://omsi.edu/">OMSI</a>) and the <a href="https://www.olallacenter.org/arcoiris-cultural">Arcoiris Cultural Center</a> a climate science outreach event was conducted at the Arcoiris Cultural Center in Newport, Oregon. Families of the Latinx, Guatemalan and Indigenous Mesoamerican community participated in a discussion, scientific demonstrations, and a "climate walk", a guided tour of nearby places such as the beach, a park and the library, where participants explored possible impacts of climate change on the local environment.
 </p>
+<p>Maps used for the climate walk are available <a href="Climate_walk.pdf">here</a>.
+</p>
+
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
 <img src="event2demo.jpg" style="margin:0px 0px 0px 0px;width:500px">
@@ -38,9 +42,6 @@
 <div style="width:450px;margin:0px 10px 10px 10px"> 
 <p>Top: Early-career scientist Schmitty Thompson demonstrates an activity related to sea level rise to kids. Bottom: Scientist Andreas Schmittner discusses climate change with participants.</p></div>
 </div><!--figurebox-->
-
-<p>Maps used for the climate walk are available <a href="Climate_walk.pdf">here</a>.
-</p>
 
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
@@ -57,7 +58,14 @@
 ---------------------------------------------------
 <p>Funded by the National Science Foundation, <a href="https://andreasschmittner.github.io/Projects/AA_ice_ocean/">grant 2103032</a>.</p>
 
-<p>Last updated Oct. 21, 2024</p>
+<p>In collaboration with</p>
+<img src="arcoiris_logo.png" style="margin:0px 0px 0px 0px;width:160px">
+<img src="oregon_sea_grant_logo_black_type_white_400.png" style="margin:0px 0px 0px 0px;width:200px">
+<img src="omsi_logo.png" style="margin:0px 0px 0px 0px;width:160px">
+<img src="newport_library_logo.png" style="margin:0px 0px 0px 0px;width:200px">
+<img src="nsf_logo.svg" style="margin:0px 0px 0px 0px;width:200px">
+
+<p>Last updated Dec. 18, 2024</p>
 
 </body>
 
