--- a/Projects/AA_ice_ocean/index.html
+++ b/Projects/AA_ice_ocean/index.html
@@ -23,6 +23,7 @@
 <li class="menue"><a class="menue" href="https://andreasschmittner.github.io/projects.html">Andreas' Projects</a></li>
 <li class="menue"><a class="menue" href="#results">Results</a></li>
 <li class="menue"><a class="menue" href="#publications">Publications</a></li>
+<li class="menue"><a class="menue" href="#reports">Reports</a></li>
 <li class="menue"><a class="menue" href="#presentations">Presentations</a></li>
 <li class="menue"><a class="menue" href="#people">People</a></li>
 </ul>
@@ -46,9 +47,13 @@
 
 <p>More details: <a href="Project_Description.pdf">Project Description</a></p>
 
-<div id="publications" style="width:1100px;float:left">
-<a id="publications"><h2>Publications</h2></a>
-</div><!--Publications-->
+<div id="reports" style="width:1100px;float:left">
+<a id="reports"><h2>Reports</h2></a>
+<li>Zybina, M. and Randol, S. (2024)<br>
+<b>Community Climate Events Evaluation Report</b>. </div>
+<div class="publinks"><a class="publinks" href="hhttps://andreasschmittner.github.io/Outreach/Newport_Sep8_2024/Community_Climate_Events_evaluation_report.pdf"> pdf </a></div>
+
+</div><!--Reports-->
 
 <div>
 <h2> Funded by </h2> <p>the National Science Foundation's Office of Polar Programs through Paleo Perspectives on Climate Change.</p>
@@ -59,10 +64,10 @@
 <ul>
 <li><a href="https://andreasschmittner.github.io/">Andreas Schmittner</a>, Principle Investigator<br>
 <li><a href="https://ceoas.oregonstate.edu/people/peter-clark">Peter Clark</a>, Co-PI<br>
-<li><a href="https://www.linkedin.com/in/-andrew/"></a>Andrew Haight, Co-PI<br>
+<li>Carla Herran, Co-PI<br>
 <li><a href="https://www.ems.psu.edu/directory/david-pollard">David Pollard</a>, Collaborator<br>
 <li><a href="https://www.natalyagomez.com/">Natalya Gomez</a>, Collaborator<br>
-<li><a href="https://agsci.oregonstate.edu/users/biswanath-dari">Dari Biswanath</a>, Collaborator<br>
+<li><a href="https://soo.sjtu.edu.cn/en/teacher-list/lidawei.html">Dawei Li</a>, Collaborator<br>
 </ul>
 </div><!--People-->
 
