--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -100,6 +100,16 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 	</div>
 </li>
 
+<li>Schmittner, A., and N. J. Fillman<br>
+	<b>Carbon and Carbon-13 in the Preindustrial and Glacial Ocean</b>
+	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434,<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://zenodo.org/records/11224826">data</a>
+		<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434">html</a>
+		<a class="publinks" href="https://journals.plos.org/climate/article/file?id=10.1371/journal.pclm.0000434&type=printable">pdf</a>
+	</div>
+</li>
+
 <li>Muglia, J., and A. Schmittner (2021)<br> 
 	<b>Carbon Isotope Constraints on Glacial Atlantic Meridional Overturning: Strength vs Depth</b>
 	<div class="journal"><i>Quaternary Science Reviews</i>,
