--- a/group.html
+++ b/group.html
@@ -28,11 +28,6 @@
 <div><h2>Current Group Members</h2>
 
 <ul>
-<li><h3><a href="https://sites.google.com/d/1-R7XwAFK_kiaxCMQq-Ucs-9UKZteF1ly/p/1CtccZffUJKSbXmHPkN-z-3W_iMff1NnQ/edit">Eric Mortenson</a></h3>
-Postdoc
-Project: <a href="Projects/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a><br>
-Start: April 2022 - current<br>
-
 <li><h3>Jennifer Doran</h3>
 Graduate Student (MS)
 Project: Modeling Sediment Effects on Glacial Carbon and Carbon Isotopes</a><br>
@@ -47,6 +42,11 @@ Start: Winter 2022 - current<br>
 
 <div><h2>Previous Group Members</h2>
 <ul>
+<li><h3><a href="https://sites.google.com/d/1-R7XwAFK_kiaxCMQq-Ucs-9UKZteF1ly/p/1CtccZffUJKSbXmHPkN-z-3W_iMff1NnQ/edit">Eric Mortenson</a></h3>
+Postdoc
+Project: <a href="Projects/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a><br>
+Start: April 2022 - March 2024<br>
+
 <li><h3>Nathaniel Fillman</h3>
 Graduate Student (MS)
 Project: <a href="Projects/OceanCarbon">NSFGEO-NERC: Quantifying the Modern and Glacial Ocean’s Carbon Cycle Including Isotopes</a><br>
