added data links

--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -104,7 +104,8 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 	<b>Carbon and Carbon-13 in the Preindustrial and Glacial Ocean</b>
 	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434,<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
 	<div class="publinks">
-		<a class="publinks" href="https://zenodo.org/records/11224826">data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14776160">model output data</a>
+		<a class="publinks" href="https://zenodo.org/records/11224826">code</a>
 		<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434">html</a>
 		<a class="publinks" href="https://journals.plos.org/climate/article/file?id=10.1371/journal.pclm.0000434&type=printable">pdf</a>
 	</div>
@@ -177,6 +178,13 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 
 <div id="data" style="width:1100px;float:left">
 <a id="data"><h2>Data</h2></a>
+<li>Schmittner, A., & Fillman, N. (2025)<br> 
+	<b>Preindustrial (PI) and Last Glacial Maximum (LGM) Simulations with UVic2.9.10 (MOBI2.2) Output Data [Data set]</b> In PLOS Climate (Vol. 3, Number 7, p. e0000434). 
+	<div class="journal"><i>Zenodo</i>, 
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14776160">https://doi.org/10.5281/zenodo.14776160</a>.
+	</div>
+</li>
+
 <li>Muglia, J., Mulitza, S., Repschläger, J., Schmittner, A., Lembke-Jene, L., Mix, A., Saraswat, R., Sikes, E., Waelbroeck, C., Gottschalk, J., Lippold, J., Lund, D., Martinez-Mendez, G., Michel, E., Muschitiello, F., Naik, S., Okazaki, Y., Stott, L., Voelker, A., & Zhao, N. (2023)<br>
 <b>A global synthesis of high-resolution stable isotope data from benthic foraminifera of the last deglaciation (1.1) [Data set]</b>
 	<div class="journal"><i>Zenodo</i>, 
