added data links to Schmittner and Fillman

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 	<b>Carbon and Carbon-13 in the Preindustrial and Glacial Ocean</b>
 	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434,<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
 	<div class="publinks">
-		<a class="publinks" href="https://zenodo.org/records/11224826">data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14776160">model output data</a>
+		<a class="publinks" href="https://zenodo.org/records/11224826">code</a>
 		<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434">html</a>
 		<a class="publinks" href="https://journals.plos.org/climate/article/file?id=10.1371/journal.pclm.0000434&type=printable">pdf</a>
 	</div>
