--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -90,7 +90,16 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Publications</h2></a>
 
-<li>Fillman, N., A. Schmittner and K. F. Kvale (submitted in 2023)<br> 
+
+<li>Schmittner, A. (submitted in 2025)<br>
+	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Carbon-13 Components in the Ocean</b>
+	<div class="journal"><i>Global Biogeochemical Cycles, </i> ,<a class="publinks" href="https://doi.org/10.22541/essoar.173884347.76850307/v1"> doi: 10.22541/essoar.173884347.76850307/v1.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">model input and output data, code and figure scripts</a>
+	</div>
+</li>
+
+<li>Fillman, N., A. Schmittner and K. F. Kvale (submitted in 2023, in revision)<br> 
 	<b>Variable Stoichiometry Effects on Glacial/Interglacial Ocean Model Biogeochemical Cycles and Carbon Storage</b>
 	<div class="journal"><i>Paleoceanography and Paleoclimatology</i>,
 	 <a class="publinks" href="">doi: </div>
