--- a/outreach.html
+++ b/outreach.html
@@ -29,6 +29,9 @@
 
 <ul>
 
+<li>04-23-2025 "To Collapse or Not to Collapse:  The Fate of Our Ocean Currents in a Warming World", Presentation for the Academy of Lifelong Learning, Corvallis Community Center.</li>
+
+
 <li>09-08-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Sep8_2024/index.html">Climate Science at Arcoiris. </a></li>
 
 <li>08-16-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Aug16_2024/index.html">Climate Science at Arcoiris.</a></li>
