--- a/outreach.html
+++ b/outreach.html
@@ -29,8 +29,7 @@
 
 <ul>
 
-<li>04-23-2025 "To Collapse or Not to Collapse:  The Fate of Our Ocean Currents in a Warming World", Presentation for the Academy of Lifelong Learning, Corvallis Community Center.</li>
-
+<li>04-23-2025 "To Collapse or Not to Collapse:  The Fate of Our Ocean Currents in a Warming World", Presentation for the Academy of Lifelong Learning, Corvallis Community Center. <a href="https://drive.google.com/file/d/1ysDJZPFdG6votE9ZUT0gTTCa3zaKMXCq/view"> Spring 2025 Program </a></li>
 
 <li>09-08-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Sep8_2024/index.html">Climate Science at Arcoiris. </a></li>
 
