added WICL talk

--- a/outreach.html
+++ b/outreach.html
@@ -29,6 +29,8 @@
 
 <ul>
 
+<li>04-23-2025 "Climate Change and The Ocean Conveyor Belt", Presentation for the Willamette Institude for Continued Learning, Willamette University, Salem, Oregon. <a href="https://wiclsalem.org/event/climate-change-and-the-ocean-conveyor-belt-andreas-schmittner-john-kaufmann/">WICL</a></li>
+
 <li>04-23-2025 "To Collapse or Not to Collapse:  The Fate of Our Ocean Currents in a Warming World", Presentation for the Academy of Lifelong Learning, Corvallis Community Center. <a href="https://drive.google.com/file/d/1ysDJZPFdG6votE9ZUT0gTTCa3zaKMXCq/view"> Spring 2025 Program </a></li>
 
 <li>09-08-2024 <a href="https://andreasschmittner.github.io/Outreach/Newport_Sep8_2024/index.html">Climate Science at Arcoiris. </a></li>
