moved projects to completed

--- a/projects.html
+++ b/projects.html
@@ -35,40 +35,41 @@
 <div><h2>Current Projects</h2>
 
 <ul>
-<li><h3><a href="Projects/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a></h3>
-Funded by: National Science Foundation's Office of Polar Programs<br>
-Award: 2103032<br>
-Period: 09-01-2021 to 08-31-2024<br>
-Amount: $772,265</br>
-PIs: Schmittner, Clark, Haight<br>
 
 <li><h3><a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning
 Circulation in the Modern and Glacial Ocean</a></h3>
 Jointly funded by: National Science Foundation's Physical Oceanography and Marine Geology and Geophysics Programs<br>
 Award: 2049357<br>
-Period: 06/15/2021 to 05/31/2024<br>
+Period: 06/15/2021 to 05/31/2026<br>
 Amount: $612,636</br>
 PIs: Schmittner, Danabasoglu, Bachman<br>
 
 <li><h3><a href="Projects/Nd">Modeling the Ocean Distribution of Neodymium Isotopes: Testing the Bottom-Up Hypothesis</a></h3>
 Jointly funded by: National Science Foundation's Chemical Oceanography and Marine Geology and Geophysics Programs<br>
 Award: 2022461<br>
-Period: 08/01/2020 to 07/31/2023<br>
+Period: 08/01/2020 to 07/31/2026<br>
 Amount: $599,881</br>
 PIs: Schmittner, Haley<br>
-
-<li><h3><a href="Projects/OceanCarbon">NSFGEO-NERC: Quantifying the Modern and Glacial Ocean’s Carbon Cycle
-Including Isotopes</a></h3>
-Funded by: National Science Foundation's Chemical Oceanography Program<br>
-Award: 1924215<br>
-Period: 09/01/2019 to 08/31/2022<br>
-Amount: $431,527</br>
-PIs: Schmittner, Khatiwala<br>
 
 </ul>
 </div>
 <div><h2><a id="completed">Completed Projects</a></h2>
 <ul>
+
+<li><h3><a href="Projects/Completed/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a></h3>
+Funded by: National Science Foundation's Office of Polar Programs<br>
+Award: 2103032<br>
+Period: 09-01-2021 to 08-31-2025<br>
+Amount: $772,265</br>
+PIs: Schmittner, Clark, Herran<br>
+
+<li><h3><a href="Projects/Completed/OceanCarbon">NSFGEO-NERC: Quantifying the Modern and Glacial Ocean’s Carbon Cycle
+Including Isotopes</a></h3>
+Funded by: National Science Foundation's Chemical Oceanography Program<br>
+Award: 1924215<br>
+Period: 09/01/2019 to 08/31/2024<br>
+Amount: $431,527</br>
+PIs: Schmittner, Khatiwala<br>
 
 <li><h3><a chref="http://wserv4.esc.cam.ac.uk/pastclimate/?page_id=14">Investigating Past Ocean Dynamics (IPODs)</a></h3>
 Funded by: International Quaternary Association (INQUA)<br>
