fixed report url

--- a/Projects/Completed/AA_ice_ocean/index.html
+++ b/Projects/Completed/AA_ice_ocean/index.html
@@ -51,7 +51,7 @@
 <a id="reports"><h2>Reports</h2></a>
 <li>Zybina, M. and Randol, S. (2024)<br>
 <b>Community Climate Events Evaluation Report</b>. </div>
-<div class="publinks"><a class="publinks" href="hhttps://andreasschmittner.github.io/Outreach/Newport_Sep8_2024/Community_Climate_Events_evaluation_report.pdf"> pdf </a></div>
+<div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/Outreach/Newport_Sep8_2024/Community_Climate_Events_evaluation_report.pdf"> pdf </a></div>
 
 </div><!--Reports-->
 
