--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,8 @@
 
 <div id="links" style="float:right;width:150px">
 <ul class="menueright">
-<li><a class="menueright" href="#2023"> 2024 </a>
+<li><a class="menueright" href="#2025"> 2025 </a>
+<li><a class="menueright" href="#2024"> 2024 </a>
 <li><a class="menueright" href="#2023"> 2023 </a>
 <li><a class="menueright" href="#2022"> 2022 </a>
 <li><a class="menueright" href="#2021"> 2021 </a>
@@ -43,6 +44,33 @@
 <h2>Articles in Peer-Reviewed Publications</h2>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
+<li>Schmittner, A.<br>
+	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Carbon-13 Components in the Ocean</b>
+	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/"> doi: .</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
+		<a class="publinks" href="https://doi.org/">html</a>
+		<a class="publinks" href="">pdf</a>
+	</div>
+</li>
+
+<li>Schmittner, A., and M. Boling<br>
+	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Dissolved Inorganic Carbon Components in the Ocean</b>
+	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/"> doi: .</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
+		<a class="publinks" href="https://doi.org/">html</a>
+		<a class="publinks" href="">pdf</a>
+	</div>
+</li>
+
+<h3>Published</h3>
+
+<a id="2025"><h4>2025</h4></a>
 
 <a id="2024"><h4>2024</h4></a>
 <li>Schmittner, A., and N. J. Fillman<br>
@@ -55,8 +83,6 @@
 		<a class="publinks" href="https://journals.plos.org/climate/article/file?id=10.1371/journal.pclm.0000434&type=printable">pdf</a>
 	</div>
 </li>
-
-<h3>Published</h3>
 
 <a id="2023"><h4>2023</h4></a>
 <li>Muglia, J., S. Mulitza, J. Repschläger, A. Schmittner, L. Lembke-Jene, L. Lisiecki, A. Mix, R. Saraswat, E. Sikes, C. Waelbroeck, J. Gottschalk, J. Lippold, D. Lund, G. Martinez-Mendez, E. Michel, F. Muschitiello, S. Naik, Y. Okazaki, L. Stott, A. Voelker, and N. Zhao (2023)<br> 
