added For Farmers

--- a/climate_change.html
+++ b/climate_change.html
@@ -33,6 +33,7 @@
 <li><a class="menueright" href="#communication">Communication</a></li>
 <li><a class="menueright" href="#data">Data</a></li>
 <li><a class="menueright" href="#ethics">Ethics and Religion</a></li>
+<li><a class="menueright" href="#farmers">For Farmers</a></li>
 <li><a class="menueright" href="#humor">Humor</a></li>
 <li><a class="menueright" href="#news">News</a></li>
 <li><a class="menueright" href="#oregon">Oregon</a></li>
@@ -89,6 +90,11 @@ Climate science and the public
 <a id="data"><h2> Ethics and Religion</h2></a>
 <ul>
 <li><a href="http://w2.vatican.va/content/francesco/en/encyclicals/documents/papa-francesco_20150524_enciclica-laudato-si.html">Pope Francis' encyclica</a>
+</ul>
+
+<a id="humor"><h2> For Farmers </h2></a>
+<ul>
+<li><a href="https://workspace.oregonstate.edu/course/building-climate-resilience-for-farmers-and-ranchers">Course: Growing Farms: Building Climate Resilience for Farmers and Ranchers</a>
 </ul>
 
 <a id="humor"><h2> Humor </h2></a>
