--- a/publications.html
+++ b/publications.html
@@ -73,7 +73,7 @@
 <a id="2025"><h4>2025</h4></a>
 
 <a id="2024"><h4>2024</h4></a>
-<li>Schmittner, A., and N. J. Fillman<br>
+<li>Schmittner, A., and N. J. Fillman (2024) <br>
 	<b>Carbon and Carbon-13 in the Preindustrial and Glacial Ocean</b>
 	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434,<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
 	<div class="publinks">
