fixed farmers link

--- a/climate_change.html
+++ b/climate_change.html
@@ -92,7 +92,7 @@ Climate science and the public
 <li><a href="http://w2.vatican.va/content/francesco/en/encyclicals/documents/papa-francesco_20150524_enciclica-laudato-si.html">Pope Francis' encyclica</a>
 </ul>
 
-<a id="humor"><h2> For Farmers </h2></a>
+<a id="farmers"><h2> For Farmers </h2></a>
 <ul>
 <li><a href="https://workspace.oregonstate.edu/course/building-climate-resilience-for-farmers-and-ranchers">Course: Growing Farms: Building Climate Resilience for Farmers and Ranchers</a>
 </ul>
