fixed ethics link

--- a/climate_change.html
+++ b/climate_change.html
@@ -87,7 +87,7 @@ Climate science and the public
 <li><a href="https://www.ncei.noaa.gov/">National Center for Environmental Information</a> (NOAA)
 </ul>
 
-<a id="data"><h2> Ethics and Religion</h2></a>
+<a id="ethics"><h2> Ethics and Religion</h2></a>
 <ul>
 <li><a href="http://w2.vatican.va/content/francesco/en/encyclicals/documents/papa-francesco_20150524_enciclica-laudato-si.html">Pope Francis' encyclica</a>
 </ul>
