--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,10 @@
 <h2>Articles in Peer-Reviewed Publications</h2>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
+
+<h3>Published</h3>
+
+<a id="2025"><h4>2025</h4></a>
 <li>Schmittner, A.<br>
 	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Carbon-13 Components in the Ocean</b>
 	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/"> doi: .</a></div>
@@ -52,25 +56,21 @@
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
 		<a class="publinks" href="https://doi.org/">html</a>
-		<a class="publinks" href="">pdf</a>
+		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_b.pdf">pdf</a>
 	</div>
 </li>
 
 <li>Schmittner, A., and M. Boling<br>
 	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Dissolved Inorganic Carbon Components in the Ocean</b>
-	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/"> doi: .</a></div>
+	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/10.1029/2025GB008526"> doi: https://doi.org/10.1029/2025GB008526.</a></div>
 	<div class="publinks">
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
-		<a class="publinks" href="https://doi.org/">html</a>
-		<a class="publinks" href="">pdf</a>
+		<a class="publinks" href="https://doi.org/10.1029/2025GB008526">html</a>
+		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_a.pdf">pdf</a>
 	</div>
 </li>
-
-<h3>Published</h3>
-
-<a id="2025"><h4>2025</h4></a>
 
 <a id="2024"><h4>2024</h4></a>
 <li>Schmittner, A., and N. J. Fillman (2024) <br>
