--- a/index.html
+++ b/index.html
@@ -92,14 +92,27 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 
 <h2>Just Published</h2>
 
-<li>Schmittner, A., and N. J. Fillman<br>
-	<b>Carbon and Carbon-13 in the Preindustrial and Glacial Ocean</b>
-	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434,<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
+<li>Schmittner, A. (2025)<br>
+	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Carbon-13 Components in the Ocean</b>
+	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/"> doi: .</a></div>
 	<div class="publinks">
-		<a class="publinks" href="https://doi.org/10.5281/zenodo.14776160">model output data</a>
-		<a class="publinks" href="https://zenodo.org/records/11224826">code</a>
-		<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434">html</a>
-		<a class="publinks" href="https://journals.plos.org/climate/article/file?id=10.1371/journal.pclm.0000434&type=printable">pdf</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
+		<a class="publinks" href="https://doi.org/">html</a>
+		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_b.pdf">pdf</a>
+	</div>
+</li>
+
+<li>Schmittner, A., and M. Boling (2025)<br>
+	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Dissolved Inorganic Carbon Components in the Ocean</b>
+	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/10.1029/2025GB008526"> doi: https://doi.org/10.1029/2025GB008526.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
+		<a class="publinks" href="https://doi.org/10.1029/2025GB008526">html</a>
+		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_a.pdf">pdf</a>
 	</div>
 </li>
 
