--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,7 @@
 <h3>Published</h3>
 
 <a id="2025"><h4>2025</h4></a>
-<li>Schmittner, A.<br>
+<li>Schmittner, A. (2025)<br>
 	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Carbon-13 Components in the Ocean</b>
 	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/"> doi: .</a></div>
 	<div class="publinks">
@@ -60,7 +60,7 @@
 	</div>
 </li>
 
-<li>Schmittner, A., and M. Boling<br>
+<li>Schmittner, A., and M. Boling (2025)<br>
 	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Dissolved Inorganic Carbon Components in the Ocean</b>
 	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/10.1029/2025GB008526"> doi: https://doi.org/10.1029/2025GB008526.</a></div>
 	<div class="publinks">
