--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 
 <li>Schmittner, A. (2025)<br>
 	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Carbon-13 Components in the Ocean</b>
-	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/"> doi: .</a></div>
+	<div class="journal"><i>Global Biogeochemical Cycles, 39, e2025GB008527</i> <a class="publinks" href="https://doi.org/10.1029/2025GB008527"> doi: 10.1029/2025GB008527.</a></div>
 	<div class="publinks">
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
-		<a class="publinks" href="https://doi.org/">html</a>
+		<a class="publinks" href="https://doi.org/10.1029/2025GB008527">html</a>
 		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_b.pdf">pdf</a>
 	</div>
 </li>
 
 <li>Schmittner, A., and M. Boling (2025)<br>
 	<b>Impact of Atlantic Meridional Overturning Circulation Collapse on Dissolved Inorganic Carbon Components in the Ocean</b>
-	<div class="journal"><i>Global Biogeochemical Cycles, </i> <a class="publinks" href="https://doi.org/10.1029/2025GB008526"> doi: https://doi.org/10.1029/2025GB008526.</a></div>
+	<div class="journal"><i>Global Biogeochemical Cycles, 39, e2025GB008526</i> <a class="publinks" href="https://doi.org/10.1029/2025GB008526"> doi: 10.1029/2025GB008526.</a></div>
 	<div class="publinks">
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
