--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
-		<a class="publinks" href="https://doi.org/10.1029/2025GB008527">html</a>
+		<a class="publinks" href="https://onlinelibrary.wiley.com/share/author/JRCVW9JYA9MWKAZV36UF?target=10.1029/2025GB008527">read-only epdf</a>
 		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_b.pdf">pdf</a>
 	</div>
 </li>
@@ -67,7 +67,7 @@
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14231977">LGM model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.14774855">PI model output data</a>
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
-		<a class="publinks" href="https://doi.org/10.1029/2025GB008526">html</a>
+		<a class="publinks" href="https://onlinelibrary.wiley.com/share/author/Z3WESUPNYRAA8V85WVES?target=10.1029/2025GB008526">read-only epdf</a>
 		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_a.pdf">pdf</a>
 	</div>
 </li>
