--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,15 @@
 <h2>Articles in Peer-Reviewed Publications</h2>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
+<li>Khatiwala, S., O. Strachan, and A. Schmittner (2025)<br>
+	<b>Multi-centennial response of marine carbon pumps to global warming</b>
+	<div class="journal"><i>Nature Communications</i> <a class="publinks" href=""> doi: .</a></div>
+	<div class="publinks">
+		<a class="publinks" href="">html</a>
+		<a class="publinks" href="">pdf</a>
+	</div>
+</li>
+
 
 <h3>Published</h3>
 
