added AMSOC26 presentation

--- a/outreach.html
+++ b/outreach.html
@@ -29,6 +29,8 @@
 
 <ul>
 
+<li>01-15-2026 "Ice Ages, Hurricanes, and Corals: A Scientific Evaluation of the Department of Energy's 2025 Climate Report", Oregon Chapter of the American Meteorological Society, Portland, Oregon. <a href="https://drive.google.com/file/d/1Hev277R4A_4DiO3b0XnV4p5vDzzwhmQc/view?usp=sharing">AMSOC26</a></li>
+
 <li>09-30-2025 "Climate Change and The Ocean Conveyor Belt", Presentation for the Willamette Institude for Continued Learning, Willamette University, Salem, Oregon. <a href="https://wiclsalem.org/event/climate-change-and-the-ocean-conveyor-belt-andreas-schmittner-john-kaufmann/">WICL</a></li>
 
 <li>04-23-2025 "To Collapse or Not to Collapse:  The Fate of Our Ocean Currents in a Warming World", Presentation for the Academy of Lifelong Learning, Corvallis Community Center. <a href="https://drive.google.com/file/d/1ysDJZPFdG6votE9ZUT0gTTCa3zaKMXCq/view"> Spring 2025 Program </a></li>
