EOS Research Spotlight added

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
 		<a class="publinks" href="https://onlinelibrary.wiley.com/share/author/JRCVW9JYA9MWKAZV36UF?target=10.1029/2025GB008527">read-only epdf</a>
 		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_b.pdf">pdf</a>
+		<a class="publinks" href="https://eos.org/research-spotlights/what-could-happen-to-the-oceans-carbon-if-amoc-collapses">EOS Research Spotlight</a>
 	</div>
 </li>
 
@@ -113,6 +114,7 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 		<a class="publinks" href="https://doi.org/10.5281/zenodo.11224826">code</a>
 		<a class="publinks" href="https://onlinelibrary.wiley.com/share/author/Z3WESUPNYRAA8V85WVES?target=10.1029/2025GB008526">read-only epdf</a>
 		<a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner25gbc_a.pdf">pdf</a>
+		<a class="publinks" href="https://eos.org/research-spotlights/what-could-happen-to-the-oceans-carbon-if-amoc-collapses">EOS Research Spotlight</a>
 	</div>
 </li>
 
